# local_search_engine

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp  readme.md
header/: ConvertJSON.h  InvertedIndex.h  SearchEngine.h
json/: answers.json  config.json
src/: ConvertJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp
test/: CMakeLists.txt
